--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -751,7 +751,7 @@ label.error {
 	height:60px;
 	bottom:40px;
 	right:120px;
-	background-color:#bd0000;
+	background-color:#0081bd;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
